@@ -1,3 +1,11 @@
+2002-06-10  Michael Yount <csf@moscow.com>
+
+	* lib/Mj/Filespace.pm:  (index)  Return data in a hashref
+	instead of a list.
+
+	* lib/Mj/Format.pm:  (configset)  Bugfix:  Display warnings,
+	if present, if the command succeeds.
+
 2002-06-10  Jason L Tibbitts III  <tibbs@math.uh.edu>
 
 	* lib/Majordomo.pm (_list_file_get): New calling convention.
